--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@ layout: default
   {% capture my-include %}{% include intro.md %}{% endcapture %}
   {{ my-include | markdownify }}
   
-  <h1 class="page-heading">Presenters: 2017</h1>
+  <h1 class="page-heading">Presenters: 2018 Series A</h1>
+
+  <table>
+    <tr>
+      <th>Date</th>
+      <th>FotW presenter</th>
+      <th>FotW topic</th>
+      <th>Code presenter</th>
+      <th>Code topic</th>
+    </tr>
+    {% for meeting in site.data.topics2018 %}
+    <tr>
+      <td><span style="white-space: nowrap;">{{meeting.date}}</span></td>
+      <td>{{meeting.fotw_presenter}}</td>
+      <td>{{meeting.fotw_topic}}</td>
+      <td>{{meeting.code_presenter}}</td>
+      <td>{{meeting.code_topic}}</td>
+    </tr>
+    {% endfor %}
+  </table>
+
+  <h1 class="page-heading">Presenters: 2017 Series B</h1>
+
+  <table>
+    <tr>
+      <th>Date</th>
+      <th>FotW presenter</th>
+      <th>FotW topic</th>
+      <th>Code presenter</th>
+      <th>Code topic</th>
+    </tr>
+    {% for meeting in site.data.topics2017s2 %}
+    <tr>
+      <td><span style="white-space: nowrap;">{{meeting.date}}</span></td>
+      <td>{{meeting.fotw_presenter}}</td>
+      <td>{{meeting.fotw_topic}}</td>
+      <td>{{meeting.code_presenter}}</td>
+      <td>{{meeting.code_topic}}</td>
+    </tr>
+    {% endfor %}
+  </table>
+
+  <h1 class="page-heading">Presenters: 2017 Series A</h1>
 
   <table>
     <tr>
